# feishu-notifier-bot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: feishu.py  main.py
